Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webappdotnet5
  namespace: webappdotnet5
spec:
  selector:
    app: webappdotnet5
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
